--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,13 +104,15 @@ fixture-parentheses = false
 mark-parentheses = false
 
 [tool.pyright]
-reportShadowedImports = false
 pythonVersion = "3.8"
 pythonPlatform = "All"
 executionEnvironments = [
   { root = "./tests", extraPaths = ["./"] },
   { root = "./" },
 ]
+
+typeCheckingMode = "basic"
+reportShadowedImports = false
 
 
 [build-system]
