--- a/.github/workflows/pyright.yml
+++ b/.github/workflows/pyright.yml
@@ -17,5 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Setup Python environment
+        uses: ./.github/actions/setup-python
+
+      - run: echo "$(poetry env info --path)/bin" >> $GITHUB_PATH
+
       - name: Run Pyright
         uses: jakebailey/pyright-action@v1
