:sparkles: add git attributes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ extra_standard_library = ["typing_extensions"]
 
 [tool.ruff]
 select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
-ignore = ["E402", "C901"]
+ignore = ["E402", "C901", "UP037"]
 
 line-length = 88
 target-version = "py38"
