--- a/.github/workflows/noneflow.yml
+++ b/.github/workflows/noneflow.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
+          python-version: "3.x"
 
       - name: Test Plugin
         id: plugin-test
