--- a/website/package.json
+++ b/website/package.json
@@ -22,27 +22,23 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.9",
-    "@mdx-js/react": "^1.6.21",
-    "@svgr/webpack": "^5.5.0",
-    "clsx": "^1.1.1",
-    "copy-to-clipboard": "^3.3.1",
-    "docusaurus-preset-nonepress": "canary",
-    "file-loader": "^6.2.0",
-    "prism-react-renderer": "^1.2.1",
+    "@docusaurus/core": "^2.4.1",
+    "@mdx-js/react": "^1.6.22",
+    "clsx": "^1.2.1",
+    "@nullbot/docusaurus-preset-nonepress": "^2.1.0",
+    "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-use-pagination": "^2.0.1",
-    "resize-observer-polyfill": "^1.5.1",
-    "url-loader": "^4.1.1"
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.9",
-    "@tsconfig/docusaurus": "^1.0.4",
-    "asciinema-player": "^3.0.0-rc.1",
-    "typescript": "^4.3.5"
+    "@docusaurus/module-type-aliases": "^2.4.1",
+    "@tsconfig/docusaurus": "^1.0.5",
+    "asciinema-player": "^3.5.0",
+    "typescript": "^4.7.4"
   },
   "browserslist": {
     "production": [
@@ -55,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "engines": {
+    "node": ">=16.14"
   }
 }
