--- a/website/package.json
+++ b/website/package.json
@@ -31,8 +31,7 @@
     "react": "^17.0.1",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
-    "react-use-pagination": "^2.0.1",
-    "resize-observer-polyfill": "^1.5.1"
+    "react-use-pagination": "^2.0.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.1",
