--- a/website/package.json
+++ b/website/package.json
@@ -24,8 +24,9 @@
   "dependencies": {
     "@docusaurus/core": "^2.4.1",
     "@mdx-js/react": "^1.6.22",
-    "clsx": "^1.2.1",
     "@nullbot/docusaurus-preset-nonepress": "^2.1.1",
+    "clsx": "^1.2.1",
+    "copy-text-to-clipboard": "^3.0.1",
     "prism-react-renderer": "^1.3.5",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
