:construction_worker: update codecov trigger paths

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -9,6 +9,9 @@ on:
       - "nonebot/**"
       - "packages/**"
       - "tests/**"
+      - "actions/setup-python/**"
+      - "pyproject.toml"
+      - "poetry.lock"
 
 jobs:
   test:
