:construction_worker: update trigger paths

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -9,7 +9,8 @@ on:
       - "nonebot/**"
       - "packages/**"
       - "tests/**"
-      - "actions/setup-python/**"
+      - ".github/actions/setup-python/**"
+      - ".github/workflows/codecov.yml"
       - "pyproject.toml"
       - "poetry.lock"
 
