--- a/website/package.json
+++ b/website/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^2.4.1",
     "@tsconfig/docusaurus": "^1.0.5",
+    "@types/react-color": "^3.0.10",
     "asciinema-player": "^3.5.0",
     "typescript": "^4.7.4"
   },
