--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ ruff = ">=0.0.272,<1.0.0"
 
 [tool.poetry.group.test.dependencies]
 nonebug = "^0.3.0"
+wsproto = "^1.2.0"
 pytest-cov = "^4.0.0"
 pytest-xdist = "^3.0.2"
 pytest-asyncio = "^0.23.2"
