--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,13 +51,7 @@ pre-commit = "^3.0.0"
 ruff = ">=0.0.272,<1.0.0"
 
 [tool.poetry.group.test.dependencies]
-nonebug = "^0.3.0"
-wsproto = "^1.2.0"
-pytest-cov = "^4.0.0"
-pytest-xdist = "^3.0.2"
-pytest-asyncio = "^0.23.2"
-werkzeug = ">=2.3.6,<4.0.0"
-coverage-conditional-plugin = "^0.9.0"
+nonebot-test = { path = "./envs/test/", develop = false }
 
 [tool.poetry.group.docs.dependencies]
 nb-autodoc = "^1.0.0a5"
@@ -105,6 +99,7 @@ mark-parentheses = false
 [tool.pyright]
 pythonVersion = "3.8"
 pythonPlatform = "All"
+defineConstant = { PYDANTIC_V2 = false }
 executionEnvironments = [
   { root = "./tests", extraPaths = [
     "./",
