--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,10 +28,10 @@ include = ["nonebot/py.typed"]
 python = "^3.8"
 yarl = "^1.7.2"
 pygtrie = "^2.4.1"
-pydantic = "^1.10.0"
 loguru = ">=0.6.0,<1.0.0"
 python-dotenv = ">=0.21.0,<2.0.0"
 typing-extensions = ">=4.4.0,<5.0.0"
+pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"
 tomli = { version = "^2.0.1", python = "<3.11" }
 
 websockets = { version = ">=10.0", optional = true }
@@ -99,7 +99,7 @@ mark-parentheses = false
 [tool.pyright]
 pythonVersion = "3.8"
 pythonPlatform = "All"
-defineConstant = { PYDANTIC_V2 = false }
+defineConstant = { PYDANTIC_V2 = true }
 executionEnvironments = [
   { root = "./tests", extraPaths = [
     "./",
