--- a/tests/.coveragerc
+++ b/tests/.coveragerc
@@ -24,3 +24,5 @@ rules =
   "sys_version_info < (3, 9)": py-gte-39
   "sys_version_info < (3, 11)": py-gte-311
   "sys_version_info >= (3, 11)": py-lt-311
+  "package_version('pydantic') < (2,)": pydantic-v2
+  "package_version('pydantic') >= (2,)": pydantic-v1
