--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -6,14 +6,23 @@ on:
       - master
   pull_request:
     paths:
+      - "envs/**"
       - "nonebot/**"
       - "packages/**"
       - "tests/**"
+      - ".github/actions/setup-python/**"
+      - ".github/workflows/ruff.yml"
+      - "pyproject.toml"
+      - "poetry.lock"
 
 jobs:
   ruff:
     name: Ruff Lint
     runs-on: ubuntu-latest
+    concurrency:
+      group: pyright-${{ github.ref }}
+      cancel-in-progress: true
+
     steps:
       - uses: actions/checkout@v4
 
