--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -6,6 +6,7 @@ on:
       - master
   pull_request:
     paths:
+      - "envs/**"
       - "nonebot/**"
       - "packages/**"
       - "tests/**"
@@ -19,16 +20,18 @@ jobs:
     name: Test Coverage
     runs-on: ${{ matrix.os }}
     concurrency:
-      group: test-coverage-${{ github.ref }}-${{ matrix.os }}-${{ matrix.python-version }}
+      group: test-coverage-${{ github.ref }}-${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.env }}
       cancel-in-progress: true
     strategy:
       matrix:
         python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest, windows-latest, macos-latest]
+        env: [pydantic-v1, pydantic-v2]
       fail-fast: false
     env:
       OS: ${{ matrix.os }}
       PYTHON_VERSION: ${{ matrix.python-version }}
+      PYDANTIC_VERSION: ${{ matrix.env }}
 
     steps:
       - uses: actions/checkout@v4
@@ -37,15 +40,17 @@ jobs:
         uses: ./.github/actions/setup-python
         with:
           python-version: ${{ matrix.python-version }}
+          env-dir: ./envs/${{ matrix.env }}
+          no-root: true
 
       - name: Run Pytest
         run: |
-          cd tests/
-          poetry run pytest -n auto --cov-report xml
+          cd ./envs/${{ matrix.env }}
+          poetry run bash "../../scripts/run-tests.sh"
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v3
         with:
-          env_vars: OS,PYTHON_VERSION
+          env_vars: OS,PYTHON_VERSION,PYDANTIC_VERSION
           files: ./tests/coverage.xml
           flags: unittests
