--- a/tests/.coveragerc
+++ b/tests/.coveragerc
@@ -22,5 +22,8 @@ rules =
   "sys_platform != 'linux'": py-linux
   "sys_platform != 'darwin'": py-darwin
   "sys_version_info < (3, 9)": py-gte-39
+  "sys_version_info >= (3, 9)": py-lt-39
   "sys_version_info < (3, 11)": py-gte-311
   "sys_version_info >= (3, 11)": py-lt-311
+  "package_version('pydantic') < (2,)": pydantic-v2
+  "package_version('pydantic') >= (2,)": pydantic-v1
