:wrench: add codecov token

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -54,3 +54,5 @@ jobs:
           env_vars: OS,PYTHON_VERSION,PYDANTIC_VERSION
           files: ./tests/coverage.xml
           flags: unittests
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
