--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ all = ["fastapi", "quart", "aiohttp", "httpx", "websockets", "uvicorn"]
 
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
-addopts = "--cov=nonebot --cov-append --cov-report=term-missing"
+addopts = "--cov=nonebot --cov-report=term-missing"
 filterwarnings = ["error", "ignore::DeprecationWarning"]
 
 [tool.black]
