--- a/.github/workflows/noneflow.yml
+++ b/.github/workflows/noneflow.yml
@@ -36,7 +36,7 @@ jobs:
           private_key: ${{ secrets.APP_KEY }}
 
       - name: Reaction on issue
-        if: github.event_name == 'issue'
+        if: github.event_name == 'issues'
         run: |
           gh api --method POST /repos/${{ github.repository }}/issues/${{ github.event.issue.number }}/reactions -f "content=rocket"
         env:
