:construction_worker: fix ci

--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -27,6 +27,12 @@ jobs:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest, windows-latest, macos-latest]
         env: [pydantic-v1, pydantic-v2]
+        exclude:
+          - python-version: "3.9"
+            os: macos-latest
+        include:
+          - python-version: "3.9"
+            os: macos-13
       fail-fast: false
     env:
       OS: ${{ matrix.os }}
