--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -30,9 +30,11 @@ jobs:
         exclude:
           - python-version: "3.9"
             os: macos-latest
+            env: [pydantic-v1, pydantic-v2]
         include:
           - python-version: "3.9"
             os: macos-13
+            env: [pydantic-v1, pydantic-v2]
       fail-fast: false
     env:
       OS: ${{ matrix.os }}
