--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -23,6 +23,7 @@ jobs:
       group: test-coverage-${{ github.ref }}-${{ matrix.os }}-${{ matrix.python-version }}-${{ matrix.env }}
       cancel-in-progress: true
     strategy:
+      fail-fast: false
       matrix:
         python-version: ["3.9", "3.10", "3.11", "3.12"]
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -30,12 +31,17 @@ jobs:
         exclude:
           - python-version: "3.9"
             os: macos-latest
-            env: [pydantic-v1, pydantic-v2]
+            env: pydantic-v1
+          - python-version: "3.9"
+            os: macos-latest
+            env: pydantic-v2
         include:
           - python-version: "3.9"
             os: macos-13
-            env: [pydantic-v1, pydantic-v2]
-      fail-fast: false
+            env: pydantic-v1
+          - python-version: "3.9"
+            os: macos-13
+            env: pydantic-v2
     env:
       OS: ${{ matrix.os }}
       PYTHON_VERSION: ${{ matrix.python-version }}
