--- a/.github/workflows/noneflow.yml
+++ b/.github/workflows/noneflow.yml
@@ -36,6 +36,7 @@ jobs:
           github.event_name == 'issue_comment' && github.event.issue.pull_request
         )
       )
+    steps: []
   reaction:
     runs-on: ubuntu-latest
     name: reaction
