--- a/.github/workflows/noneflow.yml
+++ b/.github/workflows/noneflow.yml
@@ -36,7 +36,8 @@ jobs:
           github.event_name == 'issue_comment' && github.event.issue.pull_request
         )
       )
-    steps: []
+    steps:
+      - run: echo "Check passed"
   reaction:
     runs-on: ubuntu-latest
     name: reaction
