--- a/.github/workflows/website-preview-cd.yml
+++ b/.github/workflows/website-preview-cd.yml
@@ -23,6 +23,19 @@ jobs:
       pull-requests: write
 
     steps:
+      - name: Set Commit Status
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.repos.createCommitStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              sha: context.payload.workflow_run.head_sha,
+              context: 'Website Preview',
+              description: 'Deploying...',
+              state: 'pending',
+            })
+
       - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
@@ -58,14 +71,26 @@ jobs:
 
       - name: Set Commit Status
         uses: actions/github-script@v7
+        if: always()
         with:
           script: |
-            github.repos.createCommitStatus({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: context.payload.workflow_run.head_sha,
-              context: 'Website Preview',
-              description: 'Deployed to ${{ steps.deploy.outputs.deploy-url }}',
-              state: 'success',
-              target_url: '${{ steps.deploy.outputs.deploy-url }}',
-            })
+            if (context.job.status === 'success') {
+              github.repos.createCommitStatus({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                sha: context.payload.workflow_run.head_sha,
+                context: 'Website Preview',
+                description: `Deployed to ${{ steps.deploy.outputs.deploy-url }}`,
+                state: 'success',
+                target_url: `${{ steps.deploy.outputs.deploy-url }}`,
+              })
+            } else {
+              github.repos.createCommitStatus({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                sha: context.payload.workflow_run.head_sha,
+                context: 'Website Preview',
+                description: 'Deploy ' + context.job.status,
+                state: 'failure',
+              })
+            }
