--- a/.github/workflows/website-preview-cd.yml
+++ b/.github/workflows/website-preview-cd.yml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            github.repos.createCommitStatus({
+            github.rest.repos.createCommitStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
               sha: context.payload.workflow_run.head_sha,
@@ -75,7 +75,7 @@ jobs:
         with:
           script: |
             if (context.job.status === 'success') {
-              github.repos.createCommitStatus({
+              github.rest.repos.createCommitStatus({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 sha: context.payload.workflow_run.head_sha,
@@ -85,7 +85,7 @@ jobs:
                 target_url: `${{ steps.deploy.outputs.deploy-url }}`,
               })
             } else {
-              github.repos.createCommitStatus({
+              github.rest.repos.createCommitStatus({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 sha: context.payload.workflow_run.head_sha,
