--- a/website/package.json
+++ b/website/package.json
@@ -25,6 +25,7 @@
     "@docusaurus/core": "^3.5.2",
     "@mdx-js/react": "^3.0.0",
     "@nullbot/docusaurus-preset-nonepress": "^3.0.0",
+    "@swc/core": "^1.7.26",
     "clsx": "^2.0.0",
     "copy-text-to-clipboard": "^3.2.0",
     "prism-react-renderer": "^2.3.0",
@@ -32,7 +33,8 @@
     "react": "^18.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.0.0",
-    "react-use-pagination": "^2.0.1"
+    "react-use-pagination": "^2.0.1",
+    "swc-loader": "^0.2.6"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.5.2",
