--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -1,36 +1,42 @@
 {
   // This file is not used in compilation. It is here just for a nice editor experience.
-  "extends": "@tsconfig/docusaurus/tsconfig.json",
+  "extends": "@nullbot/docusaurus-tsconfig",
   "compilerOptions": {
+    "lib": ["DOM", "ESNext"],
     "baseUrl": ".",
-    "types": [
-      "node",
-      "@docusaurus/module-type-aliases",
-      "@nullbot/docusaurus-theme-nonepress"
-    ],
     "paths": {
       "@/*": ["./src/*"],
       "@theme/*": ["./src/theme/*"]
     },
-
-    /* Strict Type-Checking Options */
-    "strict": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictBindCallApply": true,
-    "strictPropertyInitialization": true,
-    "noImplicitThis": true,
-    "alwaysStrict": true,
-
-    /* Disabled on purpose (handled by ESLint, should not block compilation) */
-    "noUnusedParameters": false,
-
-    /* Advanced Options */
     "resolveJsonModule": true,
-    "skipLibCheck": true, // @types/webpack and webpack/types.d.ts are not the same thing
+    "allowArbitraryExtensions": true,
 
-    /* Use tslib */
-    "importHelpers": true,
-    "noEmitHelpers": true
+    // Duplicated from the root config, because TS does not support extending
+    // multiple configs and we want to dogfood the @docusaurus/tsconfig one
+    "allowUnreachableCode": false,
+    "exactOptionalPropertyTypes": false,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitOverride": true,
+    "noImplicitReturns": true,
+    "noPropertyAccessFromIndexSignature": false,
+    "noUncheckedIndexedAccess": true,
+    "strict": true,
+    "alwaysStrict": true,
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "strictBindCallApply": true,
+    "strictFunctionTypes": true,
+    "strictNullChecks": true,
+    "strictPropertyInitialization": true,
+    "useUnknownInCatchVariables": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "importsNotUsedAsValues": "remove",
+
+    // This is important. We run `yarn tsc` in website so we can catch issues
+    // with our declaration files (mostly names that are forgotten to be
+    // imported, invalid semantics...). Because we don't have end-to-end type
+    // tests, removing this would make things much harder to catch.
+    "skipLibCheck": false
   }
 }
