--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ include = ["nonebot/py.typed"]
 
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/nonebot/nonebot2/issues"
-"Changelog" = "https://nonebot.dev/changelog"
+"Changelog" = "https://nonebot.dev/docs/next/changelog"
 "Funding" = "https://afdian.net/@nonebot"
 
 [tool.poetry.dependencies]
