--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ include = ["nonebot/py.typed"]
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/nonebot/nonebot2/issues"
 "Changelog" = "https://nonebot.dev/changelog"
-"Funding" = "https://afdian.net/@nonebot"
+"Funding" = "https://afdian.com/@nonebot"
 
 [tool.poetry.dependencies]
 python = "^3.9"
