--- a/website/package.json
+++ b/website/package.json
@@ -22,24 +22,27 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "^2.4.1",
-    "@mdx-js/react": "^1.6.22",
-    "@nullbot/docusaurus-preset-nonepress": "^2.1.2",
-    "clsx": "^1.2.1",
-    "copy-text-to-clipboard": "^3.0.1",
-    "prism-react-renderer": "^1.3.5",
+    "@docusaurus/core": "^3.5.2",
+    "@mdx-js/react": "^3.0.0",
+    "@nullbot/docusaurus-plugin-changelog": "^3.0.0",
+    "@nullbot/docusaurus-preset-nonepress": "^3.0.0",
+    "@swc/core": "^1.7.26",
+    "clsx": "^2.0.0",
+    "copy-text-to-clipboard": "^3.2.0",
+    "prism-react-renderer": "^2.3.0",
     "raw-loader": "^4.0.2",
-    "react": "^17.0.1",
+    "react": "^18.0.0",
     "react-color": "^2.19.3",
-    "react-dom": "^17.0.1",
-    "react-use-pagination": "^2.0.1"
+    "react-dom": "^18.0.0",
+    "react-use-pagination": "^2.0.1",
+    "swc-loader": "^0.2.6"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "^2.4.1",
-    "@tsconfig/docusaurus": "^1.0.5",
+    "@docusaurus/module-type-aliases": "^3.5.2",
+    "@nullbot/docusaurus-tsconfig": "^3.0.0",
     "@types/react-color": "^3.0.10",
     "asciinema-player": "^3.5.0",
-    "typescript": "^4.7.4"
+    "typescript": "~5.5.2"
   },
   "browserslist": {
     "production": [
@@ -54,6 +57,6 @@
     ]
   },
   "engines": {
-    "node": ">=16.14"
+    "node": ">=18.0"
   }
 }
