--- a/envs/test/pyproject.toml
+++ b/envs/test/pyproject.toml
@@ -8,11 +8,11 @@ packages = [{ include = "nonebot-test.py" }]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-nonebug = "^0.3.7"
+trio = "^0.27.0"
+nonebug = "^0.4.1"
 wsproto = "^1.2.0"
 pytest-cov = "^5.0.0"
 pytest-xdist = "^3.0.2"
-pytest-asyncio = "^0.23.2"
 werkzeug = ">=2.3.6,<4.0.0"
 coverage-conditional-plugin = "^0.9.0"
 
