:lock: Security: restrict workflow context
Co-Authored-By: polarathene <5098581+polarathene@users.noreply.github.com>

--- a/.github/workflows/website-preview-ci.yml
+++ b/.github/workflows/website-preview-ci.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Export Context
         run: |
-          echo "PR_NUMBER=${{ github.event.number }}" >> ./action.env
+          echo "${{ github.event.pull_request.number }}" > ./pr-number
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
@@ -38,5 +38,5 @@ jobs:
           name: website-preview
           path: |
             ./website/build
-            ./action.env
+            ./pr-number
           retention-days: 1
